# Airi-Cpp-Server-Lib

./: .gitignore  CMakeLists.txt  INTERVIEW_GUIDE.md  README.md  client.cpp  http_server.cpp  server.cpp
.github/workflows/: ci.yml
HISTORY/day03/: README.md  server.cpp
HISTORY/day04/include/: Epoll.h
HISTORY/day05/: CMakeLists.txt  README.md  server.cpp
HISTORY/day05/common/: Channel.cpp  Epoll.cpp
HISTORY/day05/include/: Channel.h  Epoll.h
HISTORY/day06/: README.md  client.cpp
HISTORY/day07/: CMakeLists.txt  README.md
HISTORY/day07/common/: Acceptor.cpp  Channel.cpp
HISTORY/day07/include/: Channel.h
HISTORY/day08/include/: Epoll.h
HISTORY/day09/: CMakeLists.txt  README.md
HISTORY/day09/common/: Buffer.cpp  Channel.cpp  Epoll.cpp
HISTORY/day10/include/: Channel.h  Epoll.h
HISTORY/day11/: README.md
HISTORY/day11/common/: Channel.cpp  Epoll.cpp
HISTORY/day11/include/: Epoll.h
HISTORY/day12/: CMakeLists.txt  README.md
HISTORY/day12/common/: Channel.cpp
HISTORY/day12/include/: Channel.h  Epoll.h
HISTORY/day13/common/: Acceptor.cpp  Buffer.cpp  Epoll.cpp
HISTORY/day15/: README.md
HISTORY/day18/: CMakeLists.txt  README.md
HISTORY/day18/common/Poller/kqueue/: KqueuePoller.cpp
HISTORY/day19/: CMakeLists.txt  README.md
HISTORY/day20/: CMakeLists.txt  README.md
HISTORY/day21/: CMakeLists.txt
HISTORY/day22/: README.md
HISTORY/day22/common/: Eventloop.cpp
HISTORY/day22/include/: EventLoop.h
HISTORY/day23/: CMakeLists.txt  README.md
HISTORY/day23/common/: Eventloop.cpp  TcpServer.cpp
HISTORY/day23/include/: Airi-Cpp-Server-Lib.h  EventLoop.h  EventLoopThreadPool.h
HISTORY/day23/include/timer/: TimerQueue.h
HISTORY/day24/: README.md
HISTORY/day25/: server.cpp
HISTORY/day25/common/log/: LogFile.cpp  LogStream.cpp  Logger.cpp
HISTORY/day25/include/: EventLoopThread.h
HISTORY/day25/test/: LogTest.cpp
HISTORY/day26/: CMakeLists.txt  README.md  client.cpp  http_server.cpp
HISTORY/day26/common/: Connection.cpp
HISTORY/day26/common/http/: HttpContext.cpp
HISTORY/day26/include/: Connection.h  TcpServer.h
HISTORY/day26/include/log/: AsyncLogging.h
HISTORY/day26/include/timer/: TimerQueue.h
HISTORY/day27/: CMakeLists.txt  client.cpp  server.cpp
HISTORY/day27/common/: Connection.cpp
HISTORY/day27/common/http/: HttpContext.cpp  HttpServer.cpp
HISTORY/day27/common/log/: LogFile.cpp  LogStream.cpp
HISTORY/day27/files/: readme.txt
HISTORY/day27/include/: Connection.h
HISTORY/day27/include/http/: HttpRequest.h  HttpResponse.h  HttpServer.h
HISTORY/day27/test/: BenchmarkTest.cpp
HISTORY/day28/: .gitignore  README.md  dev-log.md
HISTORY/day28/app_example/: CMakeLists.txt
HISTORY/day28/common/: Eventloop.cpp  Socket.cpp  TcpServer.cpp
HISTORY/day28/common/http/: HttpServer.cpp
HISTORY/day28/common/log/: Logger.cpp
HISTORY/day28/include/: Acceptor.h  Connection.h  Socket.h
HISTORY/day28/include/Poller/: EpollPoller.h
HISTORY/day28/include/http/: HttpContext.h  HttpServer.h
HISTORY/day28/test/: BackpressureDecisionTest.cpp  TimerTest.cpp
HISTORY/day29/: CMakeLists.txt  README.md
HISTORY/day29/app_example/: CMakeLists.txt
HISTORY/day29/app_example/src/: http_server.cpp
HISTORY/day29/common/: EventLoopThreadPool.cpp  TcpServer.cpp  util.cpp
HISTORY/day29/common/Poller/kqueue/: KqueuePoller.cpp
HISTORY/day29/common/http/: HttpServer.cpp
HISTORY/day29/include/: Acceptor.h  util.h
HISTORY/day29/include/http/: GzipMiddleware.h  HttpRequest.h  HttpResponse.h  HttpServer.h
HISTORY/day29/test/: EpollPolicyTest.cpp  HttpRequestLimitsTest.cpp  TcpServerPolicyTest.cpp
HISTORY/day30/: .gitignore  CMakeLists.txt  README.md
HISTORY/day30/demo/: demo_phase4.sh  demo_server.cpp
HISTORY/day30/dev-log/: day03-IO多路复用.md  day09-Buffer缓冲区.md  day10-ThreadPool线程池.md  day12-优雅关闭与Channel控制.md  day20-Connection生命周期安全化.md  day21-安全停机与所有权RAII.md  day22-真正的one-loop-per-thread.md  day29-生产特性.md  day30-项目收官.md
HISTORY/day30/examples/src/: http_server.cpp
HISTORY/day30/examples/static/: index.html
HISTORY/day30/src/common/http/: HttpServer.cpp
HISTORY/day30/src/include/http/: AuthMiddleware.h  HttpContext.h
HISTORY/day30/src/include/log/: LogContext.h
HISTORY/day30/src/test/: HttpContextTest.cpp
HISTORY/day31/: .clang-tidy  CMakeLists.txt
HISTORY/day31/debug/: README.md  debugged_server.cpp
HISTORY/day31/src/test/: LogTest.cpp
HISTORY/day32/: .clangd  CMakeLists.txt
HISTORY/day32/cmake/: Airi-Cpp-Server-LibConfig.cmake.in
HISTORY/day32/examples/static/: ws.html
HISTORY/day33/: CMakeLists.txt
HISTORY/day33/src/test/: BackpressureDecisionTest.cpp  LogContextTest.cpp  MetricsTest.cpp  WebSocketTest.cpp
HISTORY/day34/: .gitignore  CMakeLists.txt  README.md
HISTORY/day34/benchmark/: benchmark_report.md
HISTORY/day34/debug/: buggy_server.cpp
HISTORY/day34/examples/static/: fileserver.html
HISTORY/day34/src/test/: CoroutineTest.cpp  LockFreeQueueTest.cpp
HISTORY/day35/: CMakeLists.txt
HISTORY/day36/: CMakeLists.txt  INTERVIEW_GUIDE.md
HISTORY/day36/benchmark/: conn_scale_test.cpp
HISTORY/day36/debug/: CMakeLists.txt
app_example/src/: http_server.cpp
app_example/static/: index.html  login.html
common/: Acceptor.cpp  Connection.cpp  Epoll.cpp  Socket.cpp  TcpServer.cpp
common/Poller/epoll/: EpollPoller.cpp
common/Poller/kqueue/: KqueuePoller.cpp
common/http/: HttpContext.cpp  HttpRequest.cpp  HttpResponse.cpp
common/log/: LogFile.cpp
dev-log/: day04.md  day05-Channel抽象.md  day06-EventLoop与Server回调.md  day07-Acceptor拆分.md  day11-压力测试与回调解耦.md  day15-连接状态机.md  day18-Poller策略模式拆分.md  day19-TcpServer重命名与智能指针.md  day20.md  day21.md  day22.md  day23-跨平台定时器.md  day24-异步日志系统.md  day26-HTTP应用层.md  day27-调试与性能优化.md  day28-测试框架与CI.md  日志模板规范.md
examples/src/: http_server.cpp
examples/static/: index.html
include/: Airi-Cpp-Server-Lib.h  Channel.h  TcpServer.h
include/http/: HttpContext.h  HttpRequest.h  HttpResponse.h
include/log/: Logger.h
test/: BenchmarkTest.cpp  HttpContextTest.cpp  SocketPolicyTest.cpp  StressTest.cpp  client.cpp  server.cpp
(+57 files in other folders)
